<resources>
    <string name="app_name">Intervalometer</string>
    <string name="quick_tile">Launch Camera</string>

    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>

    <!--SettingsActivity-->
    <string name="on_title_txt">On</string>

    <!--Dialog-->
    <string name="dialog_title">Intervalometer</string>
    <string name="more_info_txt">More info</string>
    <string name="start_tv">Start</string>
    <string name="shutter_value">0 sec</string>
    <string name="shutter_button_tv">Shutter Button</string>

    <string-array name="shutter_buttons_array">
        <item>Volume+</item>
        <item>Volume-</item>
        <item>Power</item>
    </string-array>

    <string-array name="intervals_array">
        <item>120</item>
        <item>180</item>
        <item>240</item>
        <item>360</item>
        <item>Custom</item>
    </string-array>

    <string name="service_active">active</string>
    <string name="service_inactive">inactive</string>

    <string name="result_label">Quick Settings Result Activity</string>
    <string name="result_output" formatted="false">The %s tile is %s.</string>
    <string name="result_return">Return to home</string>
    <string name="TimerDummy">0:00:00</string>

    <!--DurationPicker Activity Start-->
    <string name="time_hour_00" translatable="false">0</string>
    <string name="time_hour_desc">h</string>
    <string name="time_minutes_00" translatable="false">00</string>
    <string name="time_minutes_desc">m</string>
    <string name="time_seconds_00" translatable="false">00</string>
    <string name="time_seconds_desc">s</string>
    <string name="deleteBtn" translatable="false">time_picker_deleteBtn</string>

    <string name="time_picker_1" translatable="false">1</string>
    <string name="time_picker_2" translatable="false">2</string>
    <string name="time_picker_3" translatable="false">3</string>
    <string name="time_picker_4" translatable="false">4</string>
    <string name="time_picker_5" translatable="false">5</string>
    <string name="time_picker_6" translatable="false">6</string>
    <string name="time_picker_7" translatable="false">7</string>
    <string name="time_picker_8" translatable="false">8</string>
    <string name="time_picker_9" translatable="false">9</string>
    <string name="time_picker_0" translatable="false">0</string>
    <string name="time_picker_button1">Cancel</string>
    <string name="time_picker_button2">Save</string>
    <string name="frame_counter_tv">0/</string>

    <string name="title_activity_camera">CameraActivity</string>

    <!-- Main Menu-->
    <string name="shortcut_title">ShortCut</string>
    <string name="shortcut_desc">Create shortcut at your home screen</string>
    <string name="camera_app_title">Camera App</string>
    <string name="camera_app_desc">Auto launch selected camera application</string>
    <string name="root_status_title">Root Status</string>
    <string name="root_status_desc">Your device is rooted</string>
    <string name="root_status_desc_err">Your device isn`t rooted</string>
    <string name="root_dialog_hint">Sorry, you don`t have root access, therefore
    Intervals may not function properly.</string>
    <string name="root_dialog_button_ok">OK</string>


    <!-- Camera Activity -->
    <string name="camera_permission_confirmation">This app demonstrates the usage of CameraView. In order to do that, it needs permission to access camera.</string>
    <string name="camera_permission_not_granted">Camera app cannot do anything without camera permission.</string>
    <string name="picture_taken">Picture taken</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="switch_flash">Switch flash</string>
    <string name="switch_camera">Switch camera</string>
    <string name="flash_auto">Flash auto</string>
    <string name="flash_off">Flash off</string>
    <string name="flash_on">Flash on</string>

    <!-- SharedPref -->
    <string name="camera_app_name">CameraName</string>
    <string name="camera_app_package">CameraPackage</string>
    <string name="camera_app_name_default">Camera</string>
    <string name="camera_app_package_default">CameraPackage</string>
    <string name="preference_file_key">1</string>

</resources>
