<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/dialog_bg">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/dialog_title_bg">

            <TextView
                android:id="@+id/num_of_frames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/time_hour_00"
                android:textColor="@color/white"
                android:textSize="@dimen/time_picker_textSize"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:contentDescription="@string/deleteBtn"
                android:layout_marginStart="32dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:paddingTop="8dp"
                android:src="@drawable/ic_material_backspace_white03" />
        </RelativeLayout>

        <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:paddingBottom="0dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/button_1"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_1" />

            <TextView
                android:id="@+id/button_2"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_2" />

            <TextView
                android:id="@+id/button_3"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_3" />

            <TextView
                android:id="@+id/button_4"

                style="@style/TimePickerButtons"
                android:text="@string/time_picker_4" />

            <TextView
                android:id="@+id/button_5"

                style="@style/TimePickerButtons"
                android:text="@string/time_picker_5" />

            <TextView
                android:id="@+id/button_6"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_6" />

            <TextView
                android:id="@+id/button_7"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_7" />

            <TextView
                android:id="@+id/button_8"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_8" />

            <TextView
                android:id="@+id/button_9"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_9" />

            <TextView
                android:id="@+id/button_cancel"
                android:layout_gravity="center"
                android:text="@string/time_picker_button1"
                android:textColor="@color/colorText"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/button_0"
                style="@style/TimePickerButtons"
                android:text="@string/time_picker_0" />

            <TextView
                android:id="@+id/button_save"
                android:layout_gravity="center"
                android:text="@string/time_picker_button2"
                android:textColor="@color/colorAccentSecond"
                android:textSize="18sp"
                android:textStyle="bold" />
        </GridLayout>

    </LinearLayout>
</LinearLayout>