<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expanded_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:padding="8dp">
    <!--View while view is expanded-->
    <RelativeLayout
        android:id="@+id/title_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_title"
            android:theme="@style/AppTheme.Text.Title" />

        <ImageView
            android:id="@+id/close_btn"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_margin="8dp"
            android:src="@drawable/ic_android_black_24dp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/shutter_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/shutter_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/shutter_value"
                android:theme="@style/AppTheme.Text.SubTitle" />

            <com.github.shchurov.horizontalwheelview.HorizontalWheelView
                android:id="@+id/shutter_wheel"
                app:activeColor="@color/colorPrimary"
                app:endLock="true"
                app:marksCount="30"
                app:normalColor="@color/colorSubTitle"
                app:onlyPositiveValues="true"
                app:showActiveRange="false"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="40dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/shutter_wheel">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/shutter_button_tv"
                    android:theme="@style/AppTheme.Text" />

                <Spinner
                    android:id="@+id/spinner_shutter_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="12dp" />

            </RelativeLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/other_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/shutter_container">

            <TextView
                android:id="@+id/duration_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="Duration"
                android:theme="@style/AppTheme.Text" />

            <TextView
                android:id="@+id/intervals_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Intervals"
                android:theme="@style/AppTheme.Text" />

            <TextView
                android:id="@+id/framerate_title_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="16dp"
                android:text="Frame rate"
                android:theme="@style/AppTheme.Text" />

            <Spinner
                android:id="@+id/spinner_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/framerate_title_tv"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="4dp" />

            <Spinner
                android:id="@+id/spinner_intervals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/framerate_title_tv"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp" />

            <Spinner
                android:id="@+id/spinner_frames"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/framerate_title_tv"
                android:layout_margin="4dp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/other_settings">

            <TextView
                android:id="@+id/info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/more_info_txt"
                android:textAllCaps="true"

                android:theme="@style/AppTheme.Text.Button" />

            <TextView
                android:id="@+id/start_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/start_tv"
                android:textAllCaps="true"
                android:theme="@style/AppTheme.Text.Button" />
        </RelativeLayout>

    </RelativeLayout>
    <!--&lt;!&ndash;Album image for the song currently playing.&ndash;&gt;-->

</LinearLayout>